parser/src/commonAntlr/antlr/.antlr/PlankParser.java
// Generated from /home/gabi/Projects/kotlin/jplank/parser/src/commonAntlr/antlr/PlankParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PlankParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, NEWLINE=2, AT=3, SEMICOLON=4, COMMA=5, COLON=6, BAR=7, LPAREN=8, 
		RPAREN=9, LBRACE=10, RBRACE=11, LBRACKET=12, RBRACKET=13, APOSTROPHE=14, 
		DOT=15, AMPERSTAND=16, ADD=17, SUB=18, DIV=19, TIMES=20, CONCAT=21, BANG=22, 
		EQUAL=23, ASSIGN=24, GT=25, LT=26, GTE=27, LTE=28, EQ=29, NEQ=30, DOUBLE_ARROW_LEFT=31, 
		ARROW_LEFT=32, RETURN=33, FUN=34, TYPE=35, LET=36, IF=37, ELSE=38, MUTABLE=39, 
		TRUE=40, FALSE=41, IMPORT=42, SIZEOF=43, MODULE=44, MATCH=45, CASE=46, 
		IDENTIFIER=47, STRING=48, INT=49, DECIMAL=50;
	public static final int
		RULE_file = 0, RULE_module = 1, RULE_semis = 2, RULE_ws = 3, RULE_qualifiedPath = 4, 
		RULE_typeRef = 5, RULE_typePrimary = 6, RULE_param = 7, RULE_decl = 8, 
		RULE_enumMember = 9, RULE_prop = 10, RULE_attr = 11, RULE_attrExpr = 12, 
		RULE_stmt = 13, RULE_pattern = 14, RULE_expr = 15, RULE_instanceArg = 16, 
		RULE_arg = 17, RULE_matchPattern = 18, RULE_primary = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "module", "semis", "ws", "qualifiedPath", "typeRef", "typePrimary", 
			"param", "decl", "enumMember", "prop", "attr", "attrExpr", "stmt", "pattern", 
			"expr", "instanceArg", "arg", "matchPattern", "primary"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'@'", "';'", "','", "':'", "'|'", "'('", "')'", "'{'", 
			"'}'", "'['", "']'", "'''", "'.'", "'&'", "'+'", "'-'", "'/'", "'*'", 
			null, "'!'", "'='", null, "'>'", "'<'", null, null, null, null, null, 
			null, "'return'", "'fun'", "'type'", "'let'", "'if'", "'else'", "'mutable'", 
			"'true'", "'false'", "'import'", "'sizeof'", "'module'", "'match'", "'case'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "NEWLINE", "AT", "SEMICOLON", "COMMA", "COLON", "BAR", "LPAREN", 
			"RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", "APOSTROPHE", "DOT", 
			"AMPERSTAND", "ADD", "SUB", "DIV", "TIMES", "CONCAT", "BANG", "EQUAL", 
			"ASSIGN", "GT", "LT", "GTE", "LTE", "EQ", "NEQ", "DOUBLE_ARROW_LEFT", 
			"ARROW_LEFT", "RETURN", "FUN", "TYPE", "LET", "IF", "ELSE", "MUTABLE", 
			"TRUE", "FALSE", "IMPORT", "SIZEOF", "MODULE", "MATCH", "CASE", "IDENTIFIER", 
			"STRING", "INT", "DECIMAL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PlankParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PlankParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public ModuleContext module() {
			return getRuleContext(ModuleContext.class,0);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				{
				setState(40);
				module();
				}
				break;
			}
			setState(46);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AT) | (1L << FUN) | (1L << TYPE) | (1L << LET) | (1L << IMPORT) | (1L << MODULE))) != 0)) {
				{
				{
				setState(43);
				decl();
				}
				}
				setState(48);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public QualifiedPathContext path;
		public TerminalNode MODULE() { return getToken(PlankParser.MODULE, 0); }
		public SemisContext semis() {
			return getRuleContext(SemisContext.class,0);
		}
		public QualifiedPathContext qualifiedPath() {
			return getRuleContext(QualifiedPathContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(MODULE);
			setState(50);
			((ModuleContext)_localctx).path = qualifiedPath();
			setState(51);
			semis();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SemisContext extends ParserRuleContext {
		public TerminalNode SEMICOLON() { return getToken(PlankParser.SEMICOLON, 0); }
		public WsContext ws() {
			return getRuleContext(WsContext.class,0);
		}
		public SemisContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_semis; }
	}

	public final SemisContext semis() throws RecognitionException {
		SemisContext _localctx = new SemisContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_semis);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(53);
			match(SEMICOLON);
			setState(54);
			ws();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WsContext extends ParserRuleContext {
		public List<TerminalNode> SEMICOLON() { return getTokens(PlankParser.SEMICOLON); }
		public TerminalNode SEMICOLON(int i) {
			return getToken(PlankParser.SEMICOLON, i);
		}
		public List<TerminalNode> WS() { return getTokens(PlankParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(PlankParser.WS, i);
		}
		public WsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ws; }
	}

	public final WsContext ws() throws RecognitionException {
		WsContext _localctx = new WsContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_ws);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS || _la==SEMICOLON) {
				{
				{
				setState(56);
				_la = _input.LA(1);
				if ( !(_la==WS || _la==SEMICOLON) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QualifiedPathContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(PlankParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(PlankParser.IDENTIFIER, i);
		}
		public List<TerminalNode> DOT() { return getTokens(PlankParser.DOT); }
		public TerminalNode DOT(int i) {
			return getToken(PlankParser.DOT, i);
		}
		public QualifiedPathContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_qualifiedPath; }
	}

	public final QualifiedPathContext qualifiedPath() throws RecognitionException {
		QualifiedPathContext _localctx = new QualifiedPathContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_qualifiedPath);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			match(IDENTIFIER);
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(63);
					match(DOT);
					setState(64);
					match(IDENTIFIER);
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeRefContext extends ParserRuleContext {
		public TypeRefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeRef; }
	 
		public TypeRefContext() { }
		public void copyFrom(TypeRefContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PrimaryTypeRefContext extends TypeRefContext {
		public TypePrimaryContext value;
		public TypePrimaryContext typePrimary() {
			return getRuleContext(TypePrimaryContext.class,0);
		}
		public PrimaryTypeRefContext(TypeRefContext ctx) { copyFrom(ctx); }
	}
	public static class FunctionTypeRefContext extends TypeRefContext {
		public TypeRefContext parameter;
		public TypeRefContext returnType;
		public TerminalNode ARROW_LEFT() { return getToken(PlankParser.ARROW_LEFT, 0); }
		public List<TypeRefContext> typeRef() {
			return getRuleContexts(TypeRefContext.class);
		}
		public TypeRefContext typeRef(int i) {
			return getRuleContext(TypeRefContext.class,i);
		}
		public FunctionTypeRefContext(TypeRefContext ctx) { copyFrom(ctx); }
	}

	public final TypeRefContext typeRef() throws RecognitionException {
		return typeRef(0);
	}

	private TypeRefContext typeRef(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeRefContext _localctx = new TypeRefContext(_ctx, _parentState);
		TypeRefContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_typeRef, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			_localctx = new PrimaryTypeRefContext(_localctx);
			_ctx = _localctx;
			_prevctx = _localctx;

			setState(71);
			((PrimaryTypeRefContext)_localctx).value = typePrimary();
			}
			_ctx.stop = _input.LT(-1);
			setState(78);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new FunctionTypeRefContext(new TypeRefContext(_parentctx, _parentState));
					((FunctionTypeRefContext)_localctx).parameter = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_typeRef);
					setState(73);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(74);
					match(ARROW_LEFT);
					setState(75);
					((FunctionTypeRefContext)_localctx).returnType = typeRef(3);
					}
					} 
				}
				setState(80);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class TypePrimaryContext extends ParserRuleContext {
		public TypePrimaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typePrimary; }
	 
		public TypePrimaryContext() { }
		public void copyFrom(TypePrimaryContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class PointerTypeRefContext extends TypePrimaryContext {
		public TypePrimaryContext type;
		public TerminalNode TIMES() { return getToken(PlankParser.TIMES, 0); }
		public TypePrimaryContext typePrimary() {
			return getRuleContext(TypePrimaryContext.class,0);
		}
		public PointerTypeRefContext(TypePrimaryContext ctx) { copyFrom(ctx); }
	}
	public static class ArrayTypeRefContext extends TypePrimaryContext {
		public TypePrimaryContext type;
		public TerminalNode LBRACKET() { return getToken(PlankParser.LBRACKET, 0); }
		public TerminalNode RBRACKET() { return getToken(PlankParser.RBRACKET, 0); }
		public TypePrimaryContext typePrimary() {
			return getRuleContext(TypePrimaryContext.class,0);
		}
		public ArrayTypeRefContext(TypePrimaryContext ctx) { copyFrom(ctx); }
	}
	public static class AccessTypeRefContext extends TypePrimaryContext {
		public QualifiedPathContext path;
		public QualifiedPathContext qualifiedPath() {
			return getRuleContext(QualifiedPathContext.class,0);
		}
		public AccessTypeRefContext(TypePrimaryContext ctx) { copyFrom(ctx); }
	}
	public static class GroupTypeRefContext extends TypePrimaryContext {
		public TypeRefContext type;
		public TerminalNode LPAREN() { return getToken(PlankParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PlankParser.RPAREN, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public GroupTypeRefContext(TypePrimaryContext ctx) { copyFrom(ctx); }
	}

	public final TypePrimaryContext typePrimary() throws RecognitionException {
		TypePrimaryContext _localctx = new TypePrimaryContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_typePrimary);
		try {
			setState(92);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				_localctx = new AccessTypeRefContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(81);
				((AccessTypeRefContext)_localctx).path = qualifiedPath();
				}
				break;
			case LBRACKET:
				_localctx = new ArrayTypeRefContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(82);
				match(LBRACKET);
				setState(83);
				((ArrayTypeRefContext)_localctx).type = typePrimary();
				setState(84);
				match(RBRACKET);
				}
				break;
			case TIMES:
				_localctx = new PointerTypeRefContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(86);
				match(TIMES);
				setState(87);
				((PointerTypeRefContext)_localctx).type = typePrimary();
				}
				break;
			case LPAREN:
				_localctx = new GroupTypeRefContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(88);
				match(LPAREN);
				setState(89);
				((GroupTypeRefContext)_localctx).type = typeRef(0);
				setState(90);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public Token name;
		public TypeRefContext type;
		public TerminalNode COLON() { return getToken(PlankParser.COLON, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PlankParser.IDENTIFIER, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_param);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(94);
			((ParamContext)_localctx).name = match(IDENTIFIER);
			setState(95);
			match(COLON);
			setState(96);
			((ParamContext)_localctx).type = typeRef(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclContext extends ParserRuleContext {
		public DeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_decl; }
	 
		public DeclContext() { }
		public void copyFrom(DeclContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class FunDeclContext extends DeclContext {
		public Token name;
		public TypeRefContext returnType;
		public TerminalNode FUN() { return getToken(PlankParser.FUN, 0); }
		public TerminalNode LPAREN() { return getToken(PlankParser.LPAREN, 0); }
		public TerminalNode RPAREN() { return getToken(PlankParser.RPAREN, 0); }
		public TerminalNode IDENTIFIER() { return getToken(PlankParser.IDENTIFIER, 0); }
		public List<AttrContext> attr() {
			return getRuleContexts(AttrContext.class);
		}
		public AttrContext attr(int i) {
			return getRuleContext(AttrContext.class,i);
		}
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public TerminalNode COLON() { return getToken(PlankParser.COLON, 0); }
		public TerminalNode LBRACE() { return getToken(PlankParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PlankParser.RBRACE, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(PlankParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PlankParser.COMMA, i);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public FunDeclContext(DeclContext ctx) { copyFrom(ctx); }
	}
	public static class LetDeclContext extends DeclContext {
		public Token name;
		public TypeRefContext type;
		public ExprContext value;
		public TerminalNode LET() { return getToken(PlankParser.LET, 0); }
		public TerminalNode COLON() { return getToken(PlankParser.COLON, 0); }
		public TerminalNode EQUAL() { return getToken(PlankParser.EQUAL, 0); }
		public SemisContext semis() {
			return getRuleContext(SemisContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(PlankParser.IDENTIFIER, 0); }
		public TypeRefContext typeRef() {
			return getRuleContext(TypeRefContext.class,0);
		}
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode MUTABLE() { return getToken(PlankParser.MUTABLE, 0); }
		public LetDeclContext(DeclContext ctx) { copyFrom(ctx); }
	}
	public static class ImportDeclContext extends DeclContext {
		public QualifiedPathContext path;
		public TerminalNode IMPORT() { return getToken(PlankParser.IMPORT, 0); }
		public SemisContext semis() {
			return getRuleContext(SemisContext.class,0);
		}
		public QualifiedPathContext qualifiedPath() {
			return getRuleContext(QualifiedPathContext.class,0);
		}
		public ImportDeclContext(DeclContext ctx) { copyFrom(ctx); }
	}
	public static class ModuleDeclContext extends DeclContext {
		public QualifiedPathContext path;
		public TerminalNode MODULE() { return getToken(PlankParser.MODULE, 0); }
		public TerminalNode LBRACE() { return getToken(PlankParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PlankParser.RBRACE, 0); }
		public SemisContext semis() {
			return getRuleContext(SemisContext.class,0);
		}
		public QualifiedPathContext qualifiedPath() {
			return getRuleContext(QualifiedPathContext.class,0);
		}
		public List<DeclContext> decl() {
			return getRuleContexts(DeclContext.class);
		}
		public DeclContext decl(int i) {
			return getRuleContext(DeclContext.class,i);
		}
		public ModuleDeclContext(DeclContext ctx) { copyFrom(ctx); }
	}
	public static class StructDeclContext extends DeclContext {
		public Token name;
		public TerminalNode TYPE() { return getToken(PlankParser.TYPE, 0); }
		public TerminalNode EQUAL() { return getToken(PlankParser.EQUAL, 0); }
		public SemisContext semis() {
			return getRuleContext(SemisContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(PlankParser.IDENTIFIER, 0); }
		public TerminalNode LBRACE() { return getToken(PlankParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(PlankParser.RBRACE, 0); }
		public List<PropContext> prop() {
			return getRuleContexts(PropContext.class);
		}
		public PropContext prop(int i) {
			return getRuleContext(PropContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(PlankParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(PlankParser.COMMA, i);
		}
		public StructDeclContext(DeclContext ctx) { copyFrom(ctx); }
	}
	public static class InferLetDeclContext extends DeclContext {
		public Token name;
		public ExprContext value;
		public TerminalNode LET() { return getToken(PlankParser.LET, 0); }
		public TerminalNode EQUAL() { return getToken(PlankParser.EQUAL, 0); }
		public SemisContext semis() {
			return getRuleContext(SemisContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(PlankParser.IDENTIFIER, 0); }
		public ExprContext expr() {
			return getRuleContext(ExprContext.class,0);
		}
		public TerminalNode MUTABLE() { return getToken(PlankParser.MUTABLE, 0); }
		public InferLetDeclContext(DeclContext ctx) { copyFrom(ctx); }
	}
	public static class EnumDeclContext extends DeclContext {
		public Token name;
		public TerminalNode TYPE() { return getToken(PlankParser.TYPE, 0); }
		public TerminalNode EQUAL() { return getToken(PlankParser.EQUAL, 0); }
		public SemisContext semis() {
			return getRuleContext(SemisContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(PlankParser.IDENTIFIER, 0); }
		public List<TerminalNode> BAR() { return getTokens(PlankParser.BAR); }
		public TerminalNode BAR(int i) {
			return getToken(PlankParser.BAR, i);
		}
		public List<EnumMemberContext> enumMember() {
			return getRuleContexts(EnumMemberContext.class);
		}
		public EnumMemberContext enumMember(int i) {
			return getRuleContext(EnumMemberContext.class,i);
		}
		public EnumDeclContext(DeclContext ctx) { copyFrom(ctx); }
	}

	public final DeclContext decl() throws RecognitionException {
		DeclContext _localctx = new DeclContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_decl);
		int _la;
		try {
			setState(196);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				_localctx = new StructDeclContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				match(TYPE);
				setState(99);
				((StructDeclContext)_localctx).name = match(IDENTIFIER);
				setState(100);
				match(EQUAL);
				{
				setState(101);
				match(LBRACE);
				setState(110);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==MUTABLE || _la==IDENTIFIER) {
					{
					setState(102);
					prop();
					setState(107);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==COMMA) {
						{
						{
						setState(103);
						match(COMMA);
						setState(104);
						prop();
						}
						}
						setState(109);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					}
				}
